--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 selenium = "^4.12.0"
 toml = "^0.10.2"
+zhipuai = "^1.0.7"
+beautifulsoup4 = "^4.12.2"
 
 
 [build-system]
