--- a/examples/baidu.toml
+++ b/examples/baidu.toml
@@ -1,5 +1,5 @@
 [site]
-url = "https://passport.baidu.com/"
+url = "https://passport.baidu.com/v2/?login"
 
 [fields]
 username = { xpath = "//input[@name='userName']", file='username.txt' }
@@ -7,3 +7,7 @@ password = { xpath = "//input[@name='password']", file='password.txt' }
 
 [preactions]
 select = { xpath="//p[@title='用户名登录']", action = "click", seq=0 }
+
+[options]
+broswer='Chrome'
+user-agent="user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4389.82 Safari/537.36')"
