--- a/examples/qq.toml
+++ b/examples/qq.toml
@@ -9,5 +9,6 @@ password = { xpath = "//*[@id='p']", file='password.txt' }
 select = { xpath="//*[@id='switcher_plogin']", action = "click", seq=0 }
 
 [options]
+device='PC'
 broswer='Chrome'
-user-agent="user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4389.82 Safari/537.36')"
+user-agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36"
