--- a/examples/douban.toml
+++ b/examples/douban.toml
@@ -7,3 +7,8 @@ password = { xpath = "//input[@id='password']", file='password.txt' }
 
 [preactions]
 select_tab = { xpath="//li[@class='account-tab-account']", action = "click", seq=0 }
+
+
+[options]
+broswer='Firefox'
+user-agent="Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Mobile Safari/537.36"
