--- a/examples/douban2.toml
+++ b/examples/douban2.toml
@@ -9,5 +9,5 @@ password = { xpath = "//input[@id='password']", file='password.txt' }
 select_tab = { xpath="//li[@class='account-tab-account']", action = "click", seq=0 }
 
 [options]
-broswer='Chrome'
-user-agent="user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4389.82 Safari/537.36')"
+broswer='Firefox'
+user-agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4389.82 Safari/537.36')"
